kubernetes/blog/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      volumes:
        - name: blog-content
          persistentVolumeClaim:
            claimName: blog-claim
        - name: database-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-database-kv
        - name: smtp-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-smtp-kv
      containers:
        - name: ghost
          image: ghost:5
          imagePullPolicy: Always
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: blog-content
              mountPath: /var/lib/ghost/content
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
